// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHeaderLogo is rendered 1`] = `
<a
  aria-label="aria-label"
  class="euiHeaderLogo testClass1 testClass2"
  data-test-subj="test subject string"
>
  <svg
    class="euiIcon euiHeaderLogo__icon euiIcon--xLarge"
  >
    <title>
      Go to Kibana home page
    </title>
    <use
      href="#logo_kibana"
    />
  </svg>
</a>
`;

exports[`EuiHeaderLogo renders href 1`] = `
<a
  class="euiHeaderLogo"
  href="#"
>
  <svg
    class="euiIcon euiHeaderLogo__icon euiIcon--xLarge"
  >
    <title>
      Go to Kibana home page
    </title>
    <use
      href="#logo_kibana"
    />
  </svg>
</a>
`;
